*Add context to profilehandler
