# swagger/swagger.yaml
@@ -182,7 +182,7 @@ paths:
             $ref: '#/definitions/UserDetails'
         '403':
           description: User wasnt login or dont have permission to get this profile.
-  '/profile/{user_id}/avatar':
+  '/profile/avatar':
     put:
       summary: Put user avatar to S3 and avatar link to MySQL
       consumes:
@@ -190,34 +190,21 @@ paths:
       produces:
         - application/json
       parameters:
-        - in: path
-          name: user_id
-          type: string
-          description: User ID
-          required: true
         - in: formData
           name: upfile
           type: file
           description: Upload File
       responses:
         '200':
-          description: User profile
+          description: Avatar uploaded
           schema:
             $ref: '#/definitions/UserDetails'
         '403':
           description: User wasnt login or dont have permission to get this profile.
     delete:
       summary: Delete user avatar from S3 and MySQL
-      consumes:
-        - application/json
       produces:
         - application/json
-      parameters:
-        - in: path
-          name: user_id
-          type: string
-          required: true
-          description: User ID
       responses:
         '200':
           description: Avatar Deleted
